--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html" style="color:#60c659;">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="service-page.html" style="color:#60c659;">Services</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="about-us.html" style="color:#60c659;">About Us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="contact-us.html" style="color:#60c659;">Contact Us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="login.html" style="color:#ffffff;">Login</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="registration.html" style="color:#ffffff;">Register</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="service-page.html" style="color:#60c659;">Services</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="projects.html" style="color:#60c659;">Projects</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="about-us.html" style="color:#60c659;">About Us</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact-us.html" style="color:#60c659;">Contact Us</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="color:#60c659;">Member Access</a>
+                        <div class="dropdown-menu" role="menu" style="background-color:#181b1e;"><a class="dropdown-item" role="presentation" href="registration.html" style="color:#60c659;">Register</a><a class="dropdown-item" role="presentation" href="login.html" style="color:#60c659;">Login</a></div>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -78,25 +80,25 @@
             <div class="container" style="color:rgb(0,0,0);">
                 <div class="block-heading">
                     <h2 style="color:#000000;font-size:44px;">Services</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <p>Here you can read a bit about the services we offer</p>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-5 feature-box"><i class="icon-star icon" style="color:#000000;"></i>
-                        <h4 style="color:#60c659;">Service 1</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        <h4 style="color:#60c659;">Occupational Consulting Services</h4>
+                        <p>- Occupational health and hygiene risk &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; assessment<br>- Development of OH and hygiene &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; programs<br>- Safety program development<br>- OSH advisory services<br>- Personal protective equipment and clothing<br></p>
                     </div>
                     <div class="col-md-5 feature-box"><i class="icon-pencil icon" style="color:#000000;"></i>
-                        <h4 style="color:#60c659;">Service 2</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        <h4 style="color:#60c659;">Occupational Medical Services</h4>
+                        <p>- Physical examinations&nbsp;<br>- Lung function test<br>- Eye and hearing tests&nbsp;<br>- Vital signs<br>- Biological monitoring<br>- Employee wellness program &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; development &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
                     </div>
                     <div class="col-md-5 feature-box"><i class="icon-screen-smartphone icon" style="color:#000000;"></i>
-                        <h4 style="color:#60c659;">Service 3</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        <h4 style="color:#60c659;">Occupational Hygiene Compliance Surveys</h4>
+                        <p>- Noise exposure assessments<br>- Lighting/Illumination surveys<br>- Asbestos exposure assessments<br>- Hazardous chemical substances<br>- Exposure to silica dust assessments<br>- Ergonomics assessments<br>- Indoor air quality
+                            assessments<br>- Heat and cold stress assessment<br>- Human vibration surveys&nbsp;<br></p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="icon-refresh icon" style="color:#000000;"></i>
-                        <h4 style="color:#60c659;">Service 4</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                    </div>
+                    <div class="col-md-5 feature-box"><a class="btn btn-outline-dark btn-lg" role="button" href="services.html" style="color:#60c659;">Services</a></div>
                 </div>
             </div>
         </section>
@@ -208,8 +210,9 @@
                                 </div>
                                 <div class="collapse show item-1" role="tabpanel" data-parent="#accordion-1">
                                     <div class="card-body">
-                                        <p class="card-text" style="font-size:19.5px;"><br><br><br>Program aimed at ensuring that&nbsp;<br>the school environment does not present health risks to learners and teachers. This&nbsp;<br>program is aimed at identifying, evaluating and controlling school
-                                            related health hazards.&nbsp;<br>Hazards in schools may be in many forms including physical hazards, chemical hazards,&nbsp;<br>ergonomic hazards, biological hazards and psychosocial hazards.<br><br>.<br><br></p>
+                                        <p class="card-text" style="font-size:16px;"><br><br><br>Program aimed at ensuring that&nbsp;<br>the school environment does not present health risks to learners and teachers. This&nbsp;<br>program is aimed at identifying, evaluating and controlling school
+                                            related health hazards. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br>Hazards
+                                            in schools may be in many forms including physical hazards, chemical hazards, ergonomic hazards, biological hazards and psychosocial hazards.<br><br>.<br><br></p>
                                     </div>
                                 </div>
                             </div>
@@ -223,7 +226,7 @@
                                 </div>
                                 <div class="collapse show item-1" role="tabpanel" data-parent="#accordion-2">
                                     <div class="card-body">
-                                        <p class="card-text" style="font-size:19.5px;"><br><br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.<br><br><br>.<br><br></p>
+                                        <p class="card-text" style="font-size:16px;"><br><br><br>No project description as yet<br><br>.<br><br></p>
                                     </div>
                                 </div>
                             </div>
@@ -237,13 +240,12 @@
                                 </div>
                                 <div class="collapse show item-1" role="tabpanel" data-parent="#accordion-3">
                                     <div class="card-body">
-                                        <p class="card-text" style="font-size:19.5px;"><br>Directed at the youth (up to 18 years old), Dr&nbsp;<br>Myeni offers this program in partnership with Dr Johan Maxwell, a leadership guru. This&nbsp;<br>program is offered free of charge, learners do not have
-                                            to pay to attend this program.&nbsp;<br>Dr Maxwell does not attend the events. This program is comprised of 16 lessons spread&nbsp;<br>out over four units with the goal of helping teenagers learn leadership
-                                            values and&nbsp;<br>teaching them how to apply them to their own lives from leadership expert John C.&nbsp;<br>Maxwell. The iChoose leadership values program was designed to help students&nbsp;<br>accomplish
-                                            five goals: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                                        <p class="card-text" style="font-size:16px;"><br>Directed at the youth (up to 18 years old), Dr&nbsp;Myeni offers this program in partnership with Dr Johan Maxwell, a leadership guru. This program is offered free of charge, learners do not have to pay to attend
+                                            this program.&nbsp;<br>Dr Maxwell does not attend the events. This program is comprised of 16 lessons spread out over four units with the goal of helping teenagers learn leadership values and&nbsp;teaching them
+                                            how to apply them to their own lives from leadership expert John C.&nbsp;Maxwell. The iChoose leadership values program was designed to help students&nbsp;accomplish five goals: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                                             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-                                            &nbsp; &nbsp; &nbsp; &nbsp;<br>▪ Identify with the 16 values of leadership&nbsp;<br>▪ Take ownership of their choices&nbsp;<br>▪ Practice leadership values and develop those skills&nbsp;<br>▪ Evaluate themselves
-                                            with their applied knowledge&nbsp;<br>▪ Take turns guiding small group discussions<br><br></p>
+                                            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br>▪ Identify with the 16 values of leadership&nbsp;<br>▪ Take ownership of their choices&nbsp;<br>▪
+                                            Practice leadership values and develop those skills&nbsp;<br>▪ Evaluate themselves with their applied knowledge&nbsp;<br>▪ Take turns guiding small group discussions<br><br></p>
                                     </div>
                                 </div>
                             </div>
@@ -257,7 +259,33 @@
                                 </div>
                                 <div class="collapse show item-1" role="tabpanel" data-parent="#accordion-4">
                                     <div class="card-body">
-                                        <p class="card-text" style="font-size:19.5px;"><br><br>During the master minds sessions, we unpack leadership and assist&nbsp;<br>participants to become better leaders. These are small group sessions of up to 10 participants.<br><br></p>
+                                        <p class="card-text" style="font-size:16px;"><br><br>During the master minds sessions, we unpack leadership and assist&nbsp;<br>participants to become better leaders. These are small group sessions of up to 10 participants.<br><br></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-5 feature-box">
+                        <div role="tablist" id="accordion-4">
+                            <div class="card">
+                                <div class="card-header" role="tab" style="background-color:transparent;">
+                                    <h4 class="mb-0"><a data-toggle="collapse" aria-expanded="true" aria-controls="accordion-4 .item-1" href="div#accordion-4 .item-1" style="color:#000000;font-size:16px;">Learn More<br></a></h4>
+                                </div>
+                                <div class="collapse show item-1" role="tabpanel" data-parent="#accordion-4">
+                                    <div class="card-body"><a class="btn btn-outline-dark btn-lg" role="button" href="projects.html" style="color:#60c659;">Projects</a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="invisible col-md-5 feature-box">
+                        <div role="tablist" id="accordion-4">
+                            <div class="card">
+                                <div class="card-header invisible" role="tab" style="background-color:transparent;">
+                                    <h4 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-4 .item-1" href="div#accordion-4 .item-1" style="color:#000000;font-size:16px;"><strong>Mastermind Sessions</strong></a></h4>
+                                </div>
+                                <div class="collapse item-1" role="tabpanel" data-parent="#accordion-4">
+                                    <div class="card-body">
+                                        <p class="card-text" style="font-size:16px;"><br><br>During the master minds sessions, we unpack leadership and assist&nbsp;<br>participants to become better leaders. These are small group sessions of up to 10 participants.<br><br></p>
                                     </div>
                                 </div>
                             </div>
@@ -306,23 +334,23 @@
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Services</h3>
                         <ul>
-                            <li><a href="#" style="color:#f6f6f6;">OHS Consulting Services</a></li>
-                            <li><a href="#" style="color:#f6f6f6;">Occupational Medical Services</a></li>
-                            <li><a href="#" style="color:#f6f6f6;">Occupational Hygiene Compliance Services</a></li>
+                            <li><a href="ohs.html" style="color:#f6f6f6;">OHS Consulting Services</a></li>
+                            <li><a href="oms.html" style="color:#f6f6f6;">Occupational Medical Services</a></li>
+                            <li><a href="ohcs.html" style="color:#f6f6f6;">Occupational Hygiene Compliance Services</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>About</h3>
                         <ul>
-                            <li><a href="#" style="color:#f6f6f6;">Company</a></li>
-                            <li><a href="#" style="color:#f6f6f6;">Researchers</a></li>
+                            <li><a href="about-us.html" style="color:#f6f6f6;">Company</a></li>
+                            <li><a href="projects.html" style="color:#f6f6f6;">Projects</a></li>
                             <li></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Help</h3>
                         <ul>
-                            <li><a href="#" style="color:#f6f6f6;">FAQ</a></li>
+                            <li><a href="faq.html" style="color:#f6f6f6;">FAQ</a></li>
                             <li></li>
                             <li></li>
                         </ul>
