--- a/oms.html
+++ b/oms.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Brand</title>
+    <title>FAQ - Brand</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -42,33 +42,83 @@
             </div>
         </div>
     </nav>
-    <main class="page login-page">
-        <section class="clean-block clean-form dark" style="background-image:url(&quot;assets/img/background-canvas-close-up-1020320.jpg&quot;);background-repeat:round;">
+    <main class="page faq-page">
+        <section class="clean-block clean-faq dark">
             <div class="container">
-                <div class="block-heading"></div>
-            </div>
-            <div class="container-fluid">
-                <div class="row mh-100vh">
-                    <div class="col-10 col-sm-8 col-md-6 col-lg-6 offset-1 offset-sm-2 offset-md-3 offset-lg-0 align-self-center d-lg-flex align-items-lg-center align-self-lg-stretch bg-white p-5 rounded rounded-lg-0 my-5 my-lg-0" id="login-block">
-                        <div class="m-auto w-lg-75 w-xl-50">
-                            <h2 class="text-capitalize text-center text-dark text-info font-weight-light mb-5" style="color:#60c659;">&nbsp;Login Here</h2>
-                            <form>
-                                <div class="form-group"><label class="text-secondary">Email</label><input class="form-control" type="text" name="email" required="" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,15}$" inputmode="email"></div>
-                                <div class="form-group"><label class="text-secondary">Password</label><input class="form-control" type="password" name="password" required=""></div>
-                                <div class="form-check"><input class="form-check-input" type="checkbox" name="agree" required="" id="formCheck-1"><label class="form-check-label" for="formCheck-1" style="font-size:18px;">Remember me</label></div><button class="btn btn-outline-dark mt-2"
-                                    type="submit" style="color:#60c659;">Log In</button></form>
-                            <p class="mt-3 mb-0"><a class="text-dark text-info small" href="#" style="color:rgb(0,0,0);font-size:18px;">Forgot your email or password?</a></p>
-                            <p class="mt-3 mb-0"><a class="text-dark text-info small" href="registration.html" style="color:rgb(0,0,0);font-size:18px;">Don't have an account? Click here</a></p>
+                <div class="block-heading">
+                    <h2 style="color:#181b1e;"><br>Occupational Medical Services<br></h2>
+                </div>
+                <div role="tablist" id="accordion-1">
+                    <div class="card" style="background-color:transparent;">
+                        <div class="card-header" role="tab" style="background-image:url(&quot;none&quot;);background-size:cover;background-repeat:no-repeat;background-color:#f6f6f6;">
+                            <h4 class="mb-0" style="color:#60c659;"><a class="text-capitalize" data-toggle="collapse" aria-expanded="true" aria-controls="accordion-1 .item-1" href="div#accordion-1 .item-1" style="color:#181b1e;">Navigate to a Service</a></h4>
+                        </div>
+                        <div class="collapse show item-1" role="tabpanel" data-parent="#accordion-1" style="background-image:url(&quot;none&quot;);background-size:cover;background-repeat:no-repeat;color:#60c659;">
+                            <div class="card-body">
+                                <div>
+                                    <ul class="nav nav-tabs" style="color:#60c659;">
+                                        <li class="nav-item"><a class="nav-link" href="#s1Scroll" style="color:#181b1e;">PE</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#s2Scroll" style="color:#181b1e;">Lung Function</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#s3Scroll" style="color:#181b1e;">Eyes and Hearing</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#s4Scroll" style="color:#181b1e;">Vital Signs</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#s5Scroll" style="color:#181b1e;">Biological Monitoring</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#s6Scroll" style="color:#181b1e;">Employee Wellness</a></li>
+                                    </ul>
+                                </div>
+                                <div id="s1Scroll" style="height:10px;"></div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 d-flex align-items-end" id="bg-block" style="background-image:url(&quot;assets/img/business-clean-computer-389819.jpg&quot;);background-size:cover;background-position:center center;color:transparent;">
-                        <p class="text-left ml-auto small text-dark mb-2" style="color:transparent;"><em>&nbsp;</em><br></p>
+                </div>
+                <div class="block-content">
+                    <div class="faq-item">
+                        <h2 class="question" style="font-size:22px;">Physical Examination<br></h2>
+                        <div class="answer">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <p id="s2Scroll">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h2 class="question" style="font-size:22px;">Lung Function Test<br></h2>
+                        <div class="answer">
+                            <p id="s3Scroll">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h2 class="question" style="font-size:22px;">Eye and Hearing Tests<br></h2>
+                        <div class="answer">
+                            <p id="s4Scroll">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing
+                                elit.</p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h2 class="question" style="font-size:22px;">Vital Signs<br></h2>
+                        <div class="answer">
+                            <p id="s5Scroll">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing
+                                elit.</p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h2 class="question" style="font-size:22px;">Biological Monitoring<br></h2>
+                        <div class="answer">
+                            <p id="s6Scroll">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing
+                                elit.</p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h2 class="question" style="font-size:22px;">Employee Wellness Program Development<br></h2>
+                        <div class="answer">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing
+                                elit.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
     <div class="footer-clean" style="color:#60c659;background-color:#181b1e;">
+        <div class="clean-block add-on newsletter-sign-up" style="background-image:url(&quot;assets/img/arms-care-check-905874.jpg&quot;);background-size:cover;background-repeat:no-repeat;">
+            <h2 style="color:rgb(255,255,255);">Join our Newsletter</h2><input type="text" placeholder="Email" class="form-control"><button class="btn btn-outline-dark" type="button" style="background-color:transperant;color:#ffffff;">Subscribe</button></div>
         <footer style="padding-top:20px;">
             <div class="container">
                 <div class="row justify-content-center">
