--- a/service-page.html
+++ b/service-page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Brand</title>
+    <title>Services - Brand</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html" style="color:#60c659;">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="service-page.html" style="color:#60c659;">Services</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="service-page.html" style="color:#60c659;">Services</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="projects.html" style="color:#60c659;">Projects</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="about-us.html" style="color:#60c659;">About Us</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact-us.html" style="color:#60c659;">Contact Us</a></li>
@@ -42,33 +42,51 @@
             </div>
         </div>
     </nav>
-    <main class="page login-page">
-        <section class="clean-block clean-form dark" style="background-image:url(&quot;assets/img/background-canvas-close-up-1020320.jpg&quot;);background-repeat:round;">
+    <main class="page service-page">
+        <section class="clean-block clean-services dark">
             <div class="container">
-                <div class="block-heading"></div>
-            </div>
-            <div class="container-fluid">
-                <div class="row mh-100vh">
-                    <div class="col-10 col-sm-8 col-md-6 col-lg-6 offset-1 offset-sm-2 offset-md-3 offset-lg-0 align-self-center d-lg-flex align-items-lg-center align-self-lg-stretch bg-white p-5 rounded rounded-lg-0 my-5 my-lg-0" id="login-block">
-                        <div class="m-auto w-lg-75 w-xl-50">
-                            <h2 class="text-capitalize text-center text-dark text-info font-weight-light mb-5" style="color:#60c659;">&nbsp;Login Here</h2>
-                            <form>
-                                <div class="form-group"><label class="text-secondary">Email</label><input class="form-control" type="text" name="email" required="" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,15}$" inputmode="email"></div>
-                                <div class="form-group"><label class="text-secondary">Password</label><input class="form-control" type="password" name="password" required=""></div>
-                                <div class="form-check"><input class="form-check-input" type="checkbox" name="agree" required="" id="formCheck-1"><label class="form-check-label" for="formCheck-1" style="font-size:18px;">Remember me</label></div><button class="btn btn-outline-dark mt-2"
-                                    type="submit" style="color:#60c659;">Log In</button></form>
-                            <p class="mt-3 mb-0"><a class="text-dark text-info small" href="#" style="color:rgb(0,0,0);font-size:18px;">Forgot your email or password?</a></p>
-                            <p class="mt-3 mb-0"><a class="text-dark text-info small" href="registration.html" style="color:rgb(0,0,0);font-size:18px;">Don't have an account? Click here</a></p>
+                <div class="block-heading">
+                    <h2 style="color:rgb(0,0,0);">Service Page</h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/achievement-brainstorming-branding-1162968.jpg">
+                            <div class="card-body">
+                                <h4 class="card-title">OHS Consulting Services</h4>
+                                <p class="text-left card-text">- Occupational health and hygiene risk &nbsp; &nbsp; &nbsp; &nbsp; assessment<br>- Development of OH and hygiene &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; programs<br>- Safety program development<br>-
+                                    OSH advisory services<br>- Personal protective equipment and &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; clothing<br></p>
+                            </div>
+                            <div><a class="btn btn-outline-dark btn-lg" role="button" href="ohs.html" style="color:#60c659;"><strong>Learn More</strong><br></a></div>
                         </div>
                     </div>
-                    <div class="col-lg-6 d-flex align-items-end" id="bg-block" style="background-image:url(&quot;assets/img/business-clean-computer-389819.jpg&quot;);background-size:cover;background-position:center center;color:transparent;">
-                        <p class="text-left ml-auto small text-dark mb-2" style="color:transparent;"><em>&nbsp;</em><br></p>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/bright-cardiac-cardiology-433267.jpg" style="height:273.771px;">
+                            <div class="card-body">
+                                <h4 class="card-title">Occupaitonal Medical Services</h4>
+                                <p class="text-left card-text">- Physical examinations <br>- Lung function test<br>- Eye and hearing tests <br>- Vital signs<br>- Biological monitoring<br>- Employee wellness program &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                                    &nbsp; &nbsp; &nbsp; development &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                                    &nbsp;&nbsp;<br></p>
+                            </div>
+                            <div><a class="btn btn-outline-dark btn-lg" role="button" href="oms.html" style="color:#60c659;"><strong>Learn More</strong><br></a></div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/bed-clinic-empty-236380.jpg" style="height:273.711px;">
+                            <div class="card-body">
+                                <h4 class="card-title">Occupational Hygiene Compliance Services</h4>
+                                <p class="text-left card-text">- Noise exposure assessments<br>- Lighting/Illumination surveys<br>- Asbestos exposure assessments<br>- Hazardous chemical substances<br>- Exposure to silica dust assessments<br>- Ergonomics assessments<br>- Indoor air
+                                    quality assessments<br>- Heat and cold stress assessment<br>- Human vibration surveys <br></p>
+                            </div>
+                            <div><a class="btn btn-outline-dark btn-lg" role="button" href="ohcs.html" style="color:#60c659;"><strong>Learn More</strong><br></a></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
     <div class="footer-clean" style="color:#60c659;background-color:#181b1e;">
+        <div class="clean-block add-on newsletter-sign-up" style="background-image:url(&quot;assets/img/arms-care-check-905874.jpg&quot;);background-size:cover;background-repeat:no-repeat;">
+            <h2 style="color:rgb(255,255,255);">Join our Newsletter</h2><input type="text" placeholder="Email" class="form-control"><button class="btn btn-outline-dark" type="button" style="background-color:transperant;color:#ffffff;">Subscribe</button></div>
         <footer style="padding-top:20px;">
             <div class="container">
                 <div class="row justify-content-center">
