--- a/registration.html
+++ b/registration.html
@@ -31,11 +31,13 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html" style="color:#60c659;">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="service-page.html" style="color:#60c659;">Services</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="about-us.html" style="color:#60c659;">About Us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="contact-us.html" style="color:#60c659;">Contact Us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="login.html" style="color:#ffffff;">Login</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="registration.html" style="color:#ffffff;">Register</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="service-page.html" style="color:#60c659;">Services</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="projects.html" style="color:#60c659;">Projects</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="about-us.html" style="color:#60c659;">About Us</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact-us.html" style="color:#60c659;">Contact Us</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="color:#60c659;">Member Access</a>
+                        <div class="dropdown-menu" role="menu" style="background-color:#181b1e;"><a class="dropdown-item" role="presentation" href="registration.html" style="color:#60c659;">Register</a><a class="dropdown-item" role="presentation" href="login.html" style="color:#60c659;">Login</a></div>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -69,29 +71,29 @@
         </section>
     </main>
     <div class="footer-clean" style="color:#60c659;background-color:#181b1e;">
-        <footer>
+        <footer style="padding-top:20px;">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Services</h3>
                         <ul>
-                            <li><a href="#" style="color:#f6f6f6;">OHS Consulting Services</a></li>
-                            <li><a href="#" style="color:#f6f6f6;">Occupational Medical Services</a></li>
-                            <li><a href="#" style="color:#f6f6f6;">Occupational Hygiene Compliance Services</a></li>
+                            <li><a href="ohs.html" style="color:#f6f6f6;">OHS Consulting Services</a></li>
+                            <li><a href="oms.html" style="color:#f6f6f6;">Occupational Medical Services</a></li>
+                            <li><a href="ohcs.html" style="color:#f6f6f6;">Occupational Hygiene Compliance Services</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>About</h3>
                         <ul>
-                            <li><a href="#" style="color:#f6f6f6;">Company</a></li>
-                            <li><a href="#" style="color:#f6f6f6;">Researchers</a></li>
+                            <li><a href="about-us.html" style="color:#f6f6f6;">Company</a></li>
+                            <li><a href="projects.html" style="color:#f6f6f6;">Projects</a></li>
                             <li></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Help</h3>
                         <ul>
-                            <li><a href="#" style="color:#f6f6f6;">FAQ</a></li>
+                            <li><a href="faq.html" style="color:#f6f6f6;">FAQ</a></li>
                             <li></li>
                             <li></li>
                         </ul>
