--- a/about-us.html
+++ b/about-us.html
@@ -249,7 +249,7 @@
                 </div>
             </div>
         </section>
-        <section id="researchers" class="clean-block about-us" style="background-color:transparent;">
+        <section id="researchers" class="clean-block about-us" style="background-color:#f6f6f6;">
             <div class="container">
                 <div class="block-heading">
                     <h2 style="color:rgb(0,0,0);font-size:44px;">Meet The Researchers</h2>
